# rust_sandbox

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dev.sh  docker-compose.yml
asynchronous/: Cargo.toml
asynchronous/src/: main.rs
attributes/: Cargo.toml
attributes/src/: cfg_attr.rs  main.rs
aws-sdk/: Cargo.toml
aws-sdk/src/: main.rs
aws-sdk/src/dynamodb/: mod.rs
axum_sandbox/: Cargo.toml
axum_sandbox/async_graphql/: Cargo.toml  README.md
axum_sandbox/async_graphql/src/: main.rs
axum_sandbox/hello_world/: Cargo.toml
axum_sandbox/hello_world/src/: main.rs
axum_sandbox/jwt/: Cargo.toml
axum_sandbox/jwt/src/: main.rs
axum_sandbox/jwt/src/handlers/: authorize.rs  mod.rs  protected.rs
axum_sandbox/jwt/src/models/: auth_body.rs  auth_error.rs  claims.rs  keys.rs  mod.rs
axum_sandbox/realworld-axum-sqlx/: Cargo.toml
axum_sandbox/realworld-axum-sqlx/migrations/: 20220711165144_create_table.sql
axum_sandbox/realworld-axum-sqlx/src/: config.rs  main.rs
axum_sandbox/realworld-axum-sqlx/src/http/: error.rs  mod.rs
axum_sandbox/realworld-axum-sqlx/src/http/articles/: mod.rs
axum_sandbox/realworld-axum-sqlx/src/http/users/: follows.rs  mod.rs
axum_sandbox/todo/: Cargo.toml
axum_sandbox/todo/src/: main.rs  root.rs
axum_sandbox/todo_graphql_sqlx_postgres/: Cargo.toml  Makefile
axum_sandbox/todo_graphql_sqlx_postgres/migrations/: 20220919060035_setup.sql
axum_sandbox/todo_graphql_sqlx_postgres/src/: main.rs
axum_sandbox/todo_graphql_sqlx_postgres/src/handlers/: graphql_handler.rs
axum_sandbox/todo_graphql_sqlx_postgres/src/model/: mod.rs  todo.rs
axum_sandbox/twitter/: Cargo.toml
axum_sandbox/twitter/migrations/: 20220311174313_create_table.sql
axum_sandbox/twitter/src/: main.rs
cargo/: Makefile
cargo/examples/: a.rs
cli/src/: main.rs
cli/src/clap_/: greet.rs  mod.rs
closures/src/: cacher.rs  capture_env.rs  main.rs  move_.rs  recursive.rs
collections/src/: main.rs
collections/src/b_tree_set/: README.md
collections/src/hash_set/: mod.rs
collections/src/map/: b_tree_map.rs  hash_map.rs  mod.rs
collections/src/sequence/: linked_list.rs  mod.rs  sequence-flowchart.md  vec.rs  vec_deque.rs
collections/src/set/: b_tree_set.rs  hash_set.rs  mod.rs
concurrency/src/: base.rs  channel.rs  channel_sandbox.rs  join.rs  main.rs  move_.rs  mutex.rs  mutual_exclusion.rs  spawn_join.rs
ddd/: Cargo.toml
document/: Cargo.toml
document/src/: lib.rs  main.rs
env/: Makefile
env/src/: main.rs  option_env.rs
error_handling/: Cargo.toml
error_handling/src/: error_propagation.rs  main.rs
generics/src/: const_.rs  main.rs  point.rs
image/: Cargo.toml
io/: Cargo.toml
io/src/: main.rs  write.rs
iterators/src/: list.rs  main.rs
logs/: Cargo.toml
logs/src/: main.rs
logs/src/env_logger_/: mod.rs
logs/src/tracing/: mod.rs
macros/builder/: Cargo.toml
macros/builder/src/: lib.rs
macros/docs/: proc_macros.md
macros/proc_macros/: Cargo.toml
macros/proc_macros/src/: lib.rs
macros/src/: main.rs
modules/src/: main.rs
modules/src/modules/: mod.rs
ownership/src/: lib.rs  lifetimes.rs  main.rs  ownership.rs  references.rs
persistence/src/: arc_rw_lock.rs  main.rs  todo.rs
rusoto/: Cargo.toml
rusoto/src/: main.rs
sandbox/: Cargo.toml
serde_sandbox/: Cargo.toml
serde_sandbox/examples/: tag.rs
smart_pointers/src/: box_.rs  deref.rs  drop.rs  lib.rs  main.rs  rc.rs
smart_pointers/src/arc/: mod.rs
smart_pointers/src/rc_arc/: arc.rs  mod.rs
string/: Cargo.toml
string/src/: main.rs
structs/src/: lib.rs  main.rs  structs.rs  tuple_structs.rs
tests/: Cargo.toml
tests/src/: base.rs  err.rs  ignore.rs  main.rs  message.rs  options.rs  should_panic.rs  unit_tests.rs
tests/src/unit_testing/: e_commerce_website.rs  mod.rs
tests/tests/: integration_test.rs  pretty_assertions.rs
time/: Cargo.toml
time/src/: chrono.rs  main.rs
traits/src/: a.rs  associated_types.rs  existential_type.rs  lib.rs  main.rs  shape.rs  std_.rs  super_trait.rs  trait_object.rs
traits/src/derive/: clone.rs  copy.rs  debug.rs  (+8 more)
tree/src/: flattened_node.rs  flattened_tree.rs  main.rs  node.rs
type_conversion/: Cargo.toml
type_conversion/src/: convert_object.rs  convert_via_json.rs  from_into.rs  from_into2.rs  json.rs  lib.rs  main.rs
types/src/: integer.rs  main.rs
unit_testing/src/: calculator.rs
validation/: Cargo.toml
validation/src/: main.rs  validation.rs
(+5 files in other folders)
