[package]
name = "async_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.6"
async-graphql-axum = "4.0.6"
axum = "0.5.13"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
