[package]
name = "realworld-axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
axum = "0.5.11"
clap = { version = "3.2.10", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.139", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
