[package]
name = "todo_graphql_sqlx_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0.6", features = ["uuid"] }
async-graphql-axum = "4.0.6"
axum = "0.5.13"
dotenv = "0.15.0"
once_cell = "1.13.0"
serde = { version = "1.0.142", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
